--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,26 +1,55 @@
+@import url("https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap");
 @import "tailwindcss";
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --background: #1c1c1c;
+  --foreground: #ffffff;
+  --primary: #f15757;
+  --max-width: 1440px;
+  --navbar-height: 92px;
 }
 
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+  --color-primary: var(--primary);
+  --spacing-desktop: var(--max-width);
+  --spacing-navbar: var(--navbar-height);
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+@layer base {
+  body {
+    @apply bg-background text-foreground font-sans max-w-desktop;
+    font-family: "Space Grotesk", sans-serif;
   }
 }
 
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+@layer components {
+  .header-link {
+    @apply flex items-center gap-2.5 leading-[26px] text-[18px] font-medium;
+  }
+  .logo {
+    @apply h-[35px];
+  }
+  .btn {
+    @apply leading-6 font-medium text-[16px];
+  }
+  .btn.primary {
+    @apply bg-primary rounded-full;
+  }
+  .btn.lg {
+    @apply py-[18px] px-7;
+  }
+  .btn-icon {
+    @apply flex items-center justify-center h-[60px] w-[60px] bg-foreground rounded-full;
+  }
+  .btn-icon img {
+    @apply w-6 h-6;
+  }
+  .circle-person {
+    @apply rounded-full h-[60px] w-[60px];
+  }
+  .companies-logo {
+    @apply flex items-center justify-center w-fit h-8;
+  }
 }
