--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -72,4 +72,22 @@
   .companies-logo {
     @apply flex items-center justify-center w-fit h-8;
   }
+  .team-container {
+    @apply w-[312px] flex flex-col gap-4;
+  }
+  .team-people {
+    @apply flex items-center gap-4 rounded-full px-3.5 py-3;
+  }
+  .team-people img {
+    @apply w-16 h-16 rounded-full;
+  }
+  .team-people h6 {
+    @apply text-xl leading-8 -tracking-[0.6px] font-medium;
+  }
+  .team-people p {
+    @apply text-lg leading-[26px] text-foreground/60;
+  }
+  .team-people.active {
+    @apply bg-foreground/10;
+  }
 }
