--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -84,10 +84,10 @@
     @apply w-16 h-16 rounded-full;
   }
   .team-people h6 {
-    @apply text-xl leading-8 -tracking-[0.6px] font-medium;
+    @apply text-xl leading-8 line-clamp-1 -tracking-[0.6px] font-medium;
   }
   .team-people p {
-    @apply text-lg leading-[26px] text-foreground/60;
+    @apply text-lg leading-[26px] line-clamp-1 text-foreground/60;
   }
   .team-people.active {
     @apply bg-foreground/10;
