--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -78,7 +78,7 @@
     @apply w-[312px] flex flex-col gap-4;
   }
   .team-people {
-    @apply flex items-center gap-4 rounded-full px-3.5 py-3;
+    @apply flex items-center gap-4 rounded-full pl-3.5 py-3 transition-colors ease-in duration-150;
   }
   .team-people img {
     @apply w-16 h-16 rounded-full;
@@ -89,7 +89,7 @@
   .team-people p {
     @apply text-lg leading-[26px] line-clamp-1 text-foreground/60;
   }
-  .team-people.active {
+  .team-people:hover {
     @apply bg-foreground/10;
   }
   .statistics-container {
