--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -78,7 +78,7 @@
     @apply flex items-center justify-center w-fit h-8;
   }
   .team-container {
-    @apply w-[312px] flex flex-col gap-4;
+    @apply w-[312px] h-auto flex flex-col gap-4;
   }
   .team-people {
     @apply flex items-center justify-start gap-4 rounded-full pl-3.5 py-3 transition-all ease-in duration-300;
