--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -79,7 +79,7 @@
     @apply flex items-center justify-center w-fit h-8;
   }
   .team-container {
-    @apply max-w-[312px] w-full flex-none h-auto flex flex-col gap-4;
+    @apply w-[312px] flex-none h-auto flex flex-col gap-4;
   }
   .team-people {
     @apply flex w-full items-center justify-start gap-4 rounded-full pl-3.5 py-3 transition-all ease-in duration-300;
