--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap");
+/* @import url("https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap"); */
 @import "tailwindcss";
 
 :root {
@@ -6,7 +6,6 @@
   --foreground: #ffffff;
   --primary: #f15757;
   --secondary: #f88e12;
-  --navbar-height: 92px;
 }
 
 @theme inline {
@@ -14,15 +13,9 @@
   --color-foreground: var(--foreground);
   --color-primary: var(--primary);
   --color-secondary: var(--secondary);
-  --spacing-desktop: var(--max-width);
-  --spacing-navbar: var(--navbar-height);
 }
 
 @layer base {
-  body {
-    @apply bg-background text-foreground font-sans max-w-desktop;
-    font-family: "Space Grotesk", sans-serif;
-  }
   h2 {
     @apply leading-[62px] text-[56px] tracking-tight font-bold;
   }
