--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,3 +14,22 @@
   --color-primary: var(--primary);
   --color-secondary: var(--secondary);
 }
+
+.custom-border-bottom-dashed {
+  position: relative;
+}
+
+.custom-border-bottom-dashed::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 2px;
+  background: linear-gradient(
+    to right,
+    rgba(255, 255, 255, 0.1) 50%,
+    transparent 50%
+  );
+  background-size: 4px 2px;
+}
